--- a/frontend_vite/src/App.css
+++ b/frontend_vite/src/App.css
@@ -104,6 +104,7 @@
   margin-top: 1rem;
   text-align: left;
   background-color: #e0f2f1;
+  color: black;
   padding: 1rem;
   border-radius: 8px;
   width: 100%;
